Fixed some bugs in the minigame